# Encapsulation-Exercise

./: Banana.cpp  Banana.h  CMakeLists.txt  Monkey.cpp  Monkey.h  README.md  main.cpp
tests/: BananaTest.cpp  MonkeyTest.cpp
